--- a/BitzfitechWebApplication/Views/Users/Delete.cshtml
+++ b/BitzfitechWebApplication/Views/Users/Delete.cshtml
@@ -6,58 +6,12 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this user?</h3><br />
 <fieldset>
     <legend>UsersDB</legend>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Name)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Name)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Email)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.DateOfBirth)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.DateOfBirth)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.TwitterHandle)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.TwitterHandle)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.FavNetflix)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.FavNetflix)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.NumCats)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NumCats)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.DataShare)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.DataShare)
-    </div>
+        <div class="display-field">
+            <p>@Html.DisplayFor(model => model.Name)&nbsp;<b>@Html.DisplayFor(model => model.Id)</b></p>
+        </div>
 </fieldset>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
